...
      appBar: AppBar(
        title: const Text("Todos"),
        actions: [
          Container(
            padding: const EdgeInsets.only(right: 30),
            child: IconButton(
                key: const ValueKey("add_todo_btn"),
                onPressed: () {
                  context.go("/${AddTodoPage.routeName}");
                },
                tooltip: "Add Task",
                icon: const Icon(
                  Icons.add_task,
...
